fix display image on mobile

--- a/public/CSS/base.css
+++ b/public/CSS/base.css
@@ -417,6 +417,14 @@ footer > div {
     .title_article h1, h2{
         font-size: 1.2em;
     }
+    img{
+        max-width: 100% !important;
+        height: auto !important;
+    }
+    .background_article{
+        max-width: 100% !important;
+
+    }
 }
 
 @media screen and (max-width: 990px) {
